# pyspiro

archives/: pyspiro-0.0.1-py3-none-any.whl
project/: LICENSE.txt  MANIFEST.in  README.MD  pyproject.toml
project/src/pyspiro/: __init__.py  _load_file.py  _robinson1987.py  _spiro1982.py
project/src/pyspiro/_data/: characteristic_data.nc  flux_data.nc  hall_data.nc  pedersen_data.nc
